Starting with just dashboard. Got all to compile.
Used ngc -p tsconfig.aot.json to get everything to at least compile through angular compiler cli.

--- a/src/app/pages/tables/components/smartTables/smartTables.scss
+++ b/src/app/pages/tables/components/smartTables/smartTables.scss
@@ -1,4 +1,4 @@
-@import "../../../../theme/sass/conf/conf";
+@import "../../../../theme/sass/conf/conf.scss";
 
 .ng2-smart-table-container table.ng2-smart-table {
   th, td {
