--- a/src/app/theme/theme.scss
+++ b/src/app/theme/theme.scss
@@ -1,4 +1,4 @@
-@import "sass/conf/conf";
+@import "sass/conf/conf.scss";
 @import "sass/bootstrap-overrides/overrides";
 @import "~animate.css/animate";
 @import "sass/typography";
