--- a/src/app/pages/editors/components/ckeditor/ckeditor.scss
+++ b/src/app/pages/editors/components/ckeditor/ckeditor.scss
@@ -1,4 +1,4 @@
-@import '../../../../theme/sass/conf/conf';
+@import '../../../../theme/sass/conf/conf.scss';
 
 .cke_source {
   color: $dropdown-text!important;
