--- a/src/app/theme/components/baCheckbox/baCheckbox.scss
+++ b/src/app/theme/components/baCheckbox/baCheckbox.scss
@@ -1,4 +1,4 @@
-@import '../../sass/conf/conf';
+@import '../../sass/conf/conf.scss';
 
 @mixin validationState($color, $focusColor) {
   .control-label {
