--- a/src/app/theme/components/baPageTop/baPageTop.scss
+++ b/src/app/theme/components/baPageTop/baPageTop.scss
@@ -1,5 +1,5 @@
-@import '../../sass/conf/conf';
-@import '../../components/baMsgCenter/baMsgCenter';
+@import '../../sass/conf/conf.scss';
+@import '../../components/baMsgCenter/baMsgCenter.scss';
 
 .page-top {
   background-color: $sidebar;
