--- a/src/app/theme/sass/conf/conf.scss
+++ b/src/app/theme/sass/conf/conf.scss
@@ -1,3 +1,3 @@
-@import 'mixins';
-@import 'colorSchemes/ng2';
-@import 'variables';
+@import '_mixins.scss';
+@import 'colorSchemes/_ng2.scss';
+@import '_variables.scss';
