--- a/src/app/pages/forms/components/inputs/components/selectInputs/selectInput.scss
+++ b/src/app/pages/forms/components/inputs/components/selectInputs/selectInput.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../theme/sass/conf/conf.scss.scss";
+@import "../../../../../../theme/sass/conf/conf.scss";
 
 select.form-control[multiple] {
   overflow-y: scroll;
